Fix styling for tables in dark mode

--- a/scss/partials/_atoms.scss
+++ b/scss/partials/_atoms.scss
@@ -41,3 +41,13 @@ td {
 tr:nth-child(even) td {
   background: rgba(0, 0, 0, 0.1);
 }
+
+.dark-mode {
+  th {
+    border-bottom: 0.05em solid #fff;
+  }
+
+  tr:nth-child(even) td {
+    background: rgba(255, 255, 255, 0.1);
+  }
+}
