--- a/scss/partials/_rnr.scss
+++ b/scss/partials/_rnr.scss
@@ -36,3 +36,19 @@
     }
   }
 }
+
+.dark-mode .rnr {
+  background: rgba(255, 255, 255, 0.1);
+  border-top: 0.25em solid #fff;
+
+  th,
+  td,
+  tr:nth-child(even) td {
+    background: rgba(255, 255, 255, 0.1);
+  }
+
+  th[colspan] {
+    background: #fff;
+    color: #000;
+  }
+}
